finished css, fixed nav bar spacing between links that was messing up in responsive

--- a/index.css
+++ b/index.css
@@ -32,7 +32,18 @@
      list-style-type: none;
      width: 33.33%;
      float: left;
-     padding: 10px;
+ }
+
+ .nav-about{
+   padding-right: 50px;
+ }
+
+ .nav-projects{
+   padding-right: 40px;
+ }
+
+ .nav-contact{
+   padding-right: 20px;
  }
   
 
@@ -43,7 +54,7 @@
   }
   
    .projects, .about{
-      margin-top: 10px;
+      margin-top: -40px;
     }
 
     .about h2{
